--- a/calcProject/index.html
+++ b/calcProject/index.html
@@ -13,7 +13,7 @@
 
     <div class="container">
         <div class="calculator">
-            <div class="output-screen"><p>0</p></div>
+            <div class="output-screen"><p class="output"></p></div>
             <div class="button-container">
                 <button class="btn btn-1">C</button>
                 <button class="btn">+</button>
