--- a/Note-app-usingOOP/index.html
+++ b/Note-app-usingOOP/index.html
@@ -10,6 +10,16 @@
 
 <body>
     <main>
+        <div class="enter-note">
+            <div class="container">
+                <input id="title" type="text" placeholder="Enter note title">
+                <textarea name="textarea" id="content" cols='50' rows="30"></textarea>
+                <div class="btn-container">
+                    <button class="done">Done</button>
+                    <button class="close">Close</button>
+                </div>
+            </div>
+        </div>
         <aside class="left-nav">
             <div class="container">
                 <h1>NoteFlow</h1>
@@ -122,7 +132,7 @@
                             eum illo ut at voluptatibus alias quis asperiores. Culpa rerum commodi at. Reiciendis
                             deleniti provident fugit laudantium, tenetur voluptatem porro?</div>
                     </div> -->
-                    
+
                 </div>
             </div>
         </section>
