--- a/Note-app-usingOOP/index.html
+++ b/Note-app-usingOOP/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
@@ -21,10 +24,21 @@
             </div>
         </div>
         <aside class="left-nav">
+            <h1>NoteFlow</h1>
             <div class="container">
-                <h1>NoteFlow</h1>
-                <button onclick="addNoteHandler()" class="add-note">Add Note</button>
-                <button class="remove-note">Remove Note</button>
+                <input type="search" name="search" id="search" placeholder="Enter a note title to be searched">
+                <button onclick="addNoteHandler()" class="add-note">
+                    <p>Add Note</p>
+                    <span class="material-symbols-outlined">
+                        add
+                    </span>
+                </button>
+                <button class="remove-note">
+                    <p>Remove Note</p>
+                    <span class="material-symbols-outlined">
+                        delete
+                    </span>
+                </button>
             </div>
         </aside>
         <section class="notes-main">
